# fips-agents-cli

./: .gitignore  AGENT_FRAMEWORK_PLAN.md  CLAUDE.md  GENERATOR_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Ignite-CLI-Architecture-Analysis.md  LICENSE  MVP-PLAN.md  PLAN.md  PROMPT_ISSUE.md  PUBLISHING.md  QUICK_START_PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  llms.txt  pyproject.toml
.claude/: docs-state.json
.claude/commands/: create-release.md
.github/agents/: README.md  create-release.agent.md
.github/workflows/: release.yml  test.yml  workflow.yaml
docs/: README.md
planning/: agent-registry-roadmap.md  agent-template-gaps.md  composable-agent-capabilities.md
research/: BAML_RESEARCH_REPORT.md
retrospectives/2026-04-06_issue-triage-v0.3.0/: RETRO.md
retrospectives/2026-04-10_full-stack-integration/: RETRO.md
scripts/: README.md  release.sh
src/fips_agents_cli/: __init__.py  __main__.py  cli.py  version.py
src/fips_agents_cli/commands/: __init__.py  add.py  create.py  generate.py  model_car.py  patch.py  vendor.py
src/fips_agents_cli/tools/: __init__.py  filesystem.py  generators.py  git.py  github.py  modality.py  patching.py  project.py  validation.py
tests/: __init__.py  conftest.py  test_create.py  test_filesystem.py  test_generate.py  test_generators.py  test_github.py  test_modality.py  test_model_car.py  test_patch.py  test_project.py  test_validation.py
tests/fixtures/agent_project/: .template-info  agent.yaml  pyproject.toml
tests/fixtures/agent_project/chart/: values.yaml
tests/fixtures/agent_project/src/: agent.py
