[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fips-agents-cli"
version = "0.2.0"
description = "CLI tool for creating and managing FIPS-compliant AI agent projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Wes Jackson", email = "wjackson@redhat.com"}
]
keywords = ["cli", "ai", "agents", "mcp", "fips", "scaffolding", "code-generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "tomlkit>=0.12.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
fips-agents = "fips_agents_cli.cli:main"

[project.urls]
Homepage = "https://github.com/rdwj/fips-agents-cli"
Repository = "https://github.com/rdwj/fips-agents-cli"
Issues = "https://github.com/rdwj/fips-agents-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fips_agents_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=fips_agents_cli",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
